# mlops-framework

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt
.github/workflows/: ci-cd.yml
serving/: Dockerfile  main.py
src/: cli.py
src/mlops_framework/: __init__.py  data.py  pipeline.py  train.py
tests/: conftest.py  test_pipeline.py
