[tool.poetry]
name = "mlops-framework"
version = "0.1.0"
description = "Extensible MLOps framework"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
mlflow = "^2.13"
psycopg2-binary = "^2.9"
hydra-core = "^1.3"
dvc = "^3.50"
typer = "^0.12"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"